--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,13 +11,50 @@ html {
 
 
 
+.encabezado {
+  display: grid;
+  grid-template-columns: 2fr 10fr;
+}
+
+.inactive {
+  display: none;
+}
+
+.logo {
+  background-color: #0e0e0e;
+  padding: 20px;
+  
+}
+
+.menu_ham {
+  display: none;
+  
+
+}
+
 main {
   display: flex;
   flex-wrap: wrap;
 }
 
+.container {
+  border: 5px solid #e1bee7;
+  background-color: #fff1ff;
+  display: grid;
+  /* grid-template-columns: repeat(4, 100px); */
+  /*grid-template-columns: repeat(2, 1fr); */
+   grid-template-columns: 3fr 3fr; 
+  /* grid-template-columns: min-content min-content; 
+  /* grid-template-columns: max-content max-content;*/
+}
+
+.section {
+  background-color: #fefefe;
+}
+
 .section-a {
   padding: 25px;
+  background-color: #fefefe;
 }
 
 .section-b {
@@ -28,18 +65,22 @@ main {
   padding: 25px;
 }
 
+.section-d {
+  padding: 25px;
+}
+
 h1 {
   padding: 25px;
   font-size: 4rem;
   /*background-color: #0062d2;*/
-  color: #0062d2;
+  color: #0a3c91;
 
 }
 
 
 h2 {
   font-size: 2.5rem;
-  color: #333366;
+  color: #ba1e68;
 }
 
 p{
@@ -48,6 +89,31 @@ p{
   
   .clear{
     clear: both;
+  }
+
+ 
+  .mobile-menu {
+    background-color: #0e0e0e;
+    position: absolute;
+    top: 100px;
+    padding: 24px;
+  }
+  .mobile-menu a {
+    text-decoration: none;
+    color: #fefefe;
+    font-weight: bold;
+    /* margin-bottom: 24px; */
+  }
+  .mobile-menu ul {
+    padding: 0;
+    margin: 24px 0 0;
+    list-style: none;
+  }
+  .mobile-menu ul:nth-child(1) {
+    border-bottom: 1px solid var(--very-light-pink);
+  }
+  .mobile-menu ul li {
+    margin-bottom: 24px;
   }
   
   
@@ -60,7 +126,7 @@ p{
     /*max-width: 600px; */
     /*margin: 50px auto; */
     overflow: hidden;
-    background-color: #0062d2;
+    background-color: #0e0e0e;
     padding: 20px;
     
   }
@@ -137,4 +203,37 @@ p{
   .slidemenu #slide-item-2:checked ~ .slider .bar{ margin-left: 25%; }
   .slidemenu #slide-item-3:checked ~ .slider .bar{ margin-left: 50%; }
   .slidemenu #slide-item-4:checked ~ .slider .bar{ margin-left: 75%; }
+
+
+  @media (max-width: 640px) {
+    
+    .encabezado {
+      display: grid;
+      grid-template-columns: 12fr;
+    }
+   
+    .slidemenu {
+      display: none;
+    }
+    
+    .menu-ham{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+    
+
+  }
+
+  @media (min-width: 641px){
+    .mobile-menu {
+        display: none;
+    }
+
+    .menu-ham{
+      display: none;
+    }
+    
+    
+  }
   
