--- a/css/estilos.css
+++ b/css/estilos.css
@@ -27,6 +27,24 @@ html {
 }
 
 
+.icon {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  margin: 20px;
+  border-radius: 50%;
+  transition: all .8s;
+  cursor: pointer;
+  
+} 
+
+ .icon:hover {
+  background-color: #D40600;
+  box-shadow:  0 0 20px #D40600;
+
+}
+
+
 .principal{
   margin: 5rem;
   padding: 5rem;
