--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,13 +8,21 @@ html {
   font-size: 62.5%;
 }
 
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-
+.lucho {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap; 
+  padding: 0;
+}
 main {
   width: 100%;
   display: flex;
@@ -55,6 +63,10 @@ main {
   box-shadow:  0 0 20px #1da1f2 ;
 }
 
+span {
+  font-size: 2rem;
+  
+}
 .icon i {
   color: rgb(0, 0, 0);
   position: absolute;
@@ -104,7 +116,7 @@ svg circle {
     display: none;
   }
   
-  
+
   /*Toggle*/
   
   .slidemenu .slide-toggle:checked + label{
@@ -134,16 +146,68 @@ svg circle {
 
   .read {
     color: #FCFEFF;
-    background-color: #314259;
+    background-color: #0d4997;
     border-radius: 4rem;
     width: 10rem;
   }
-
-  .footer {
-    margin: 5rem;
-    padding: 5rem;
-    font-size: 2rem;
+   /*codigo nuevo (alex y jex)*/
+  .pie-pagina{
+    width: 100%;
+    background-color: #273a4b;
   }
+  .pie-pagina .grupo-1{
+    width: 100%;
+    max-width: 1200px;
+    margin:auto;
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap:50px;
+    padding: 45px 0px;
+  }
+  .pie-pagina .grupo-1 .box figure{
+    width: 73%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+    .pie-pagina .grupo-1 .box figure img{
+      width: 280px;
+    }
+    .pie-pagina .grupo-1 .box h2{
+      color: #fff;
+      margin-bottom: 25px;
+      font-size: 20px;
+    }
+    .pie-pagina .grupo-1 .box p{
+      color: #efefef;
+      margin-bottom: 10px;
+      ;
+    }
+    .pie-pagina .grupo-1 .red-social a{
+      display: inline-block;
+      text-decoration: none;
+      width: 45px;
+      height: 45px;
+      line-height: 45px;
+      color: #fff;
+      margin-right: 10px;
+      background-color: #314259;
+      text-align: center;
+      transition: all 300ms;
+    }
+    .pie-pagina .grupo-1 .red-social a:hover{
+      color: aqua;
+    }
+    .pie-pagina .grupo-2{
+      background-color: #3b3e85;
+      padding: 15px 10px;
+      text-align: center;
+      color: #fff;
+    }
+    .pie-pagina .grupo-2 small{
+      font-size: 15px;
+    }
 
   .ul {
     list-style-type: none;
