--- a/css/estilos.css
+++ b/css/estilos.css
@@ -39,8 +39,8 @@ html {
 } 
 
  .icon:hover {
-  background-color: #D40600;
-  box-shadow:  0 0 20px #D40600;
+  background-color: #BA1E68;
+  box-shadow:  0 0 20px #BA1E68;
 
 }
 
@@ -237,6 +237,72 @@ html {
     margin: 1rem;
     padding: 1rem;
   }
+
+  .footer {
+    margin: 5rem;
+    padding: 5rem;
+    font-size: 2rem;
+  }
+   /*codigo nuevo (alex y jex)*/
+  .pie-pagina{
+    width: 100%;
+    background-color: #273a4b;
+  }
+  .pie-pagina .grupo-1{
+    width: 100%;
+    max-width: 1200px;
+    margin:auto;
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap:50px;
+    padding: 45px 0px;
+  }
+  .pie-pagina .grupo-1 .box figure{
+    width: 73%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+    .pie-pagina .grupo-1 .box figure img{
+      width: 280px;
+    }
+    .pie-pagina .grupo-1 .box h2{
+      color: #fff;
+      margin-bottom: 25px;
+      font-size: 20px;
+    }
+    .pie-pagina .grupo-1 .box p{
+      color: #efefef;
+      margin-bottom: 10px;
+      ;
+    }
+    .pie-pagina .grupo-1 .red-social a{
+      display: inline-block;
+      text-decoration: none;
+      width: 45px;
+      height: 45px;
+      line-height: 45px;
+      color: #fff;
+      margin-right: 10px;
+      background-color: #314259;
+      text-align: center;
+      transition: all 300ms;
+    }
+    .pie-pagina .grupo-1 .red-social a:hover{
+      color: rgb(0, 149, 255);
+    }
+    .pie-pagina .grupo-2{
+      background-color: #3b3e85;
+      padding: 15px 10px;
+      text-align: center;
+      color: #fff;
+    }
+    .pie-pagina .grupo-2 small{
+      font-size: 15px;
+    }
+
+
   
   .slidemenu #slide-item-1:checked ~ .slider .bar{ margin-left: 0; }
   .slidemenu #slide-item-2:checked ~ .slider .bar{ margin-left: 25%; }
